--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1 class="bg-purple-400">Hello world</h1>
     <h3 class="bg-gray-600 text-white">Hello world</h3>
     <p class="text-yellow-400 bg-green-400">Hello world</p>
+    <section>
+      <h1 class="text-3xl font-bold border">This is header 1</h1>
+      <h2 class="text-2xl font-semibold shadow-md">This is header 2</h2>
+    </section>
   </body>
 </html>
