--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
       <h1 class="text-3xl font-bold border">This is header 1</h1>
       <h2 class="text-2xl font-semibold shadow-md">This is header 2</h2>
     </section>
+    <section>
+      <hr />
+      <div
+        class="bg-slate-400 w-96 h-40 mx-auto flex items-center justify-center"
+      >
+        <h1 class="text-3xl">Hello world</h1>
+      </div>
+    </section>
   </body>
 </html>
